--- a/chatgpt-transformer-imdb-advanced.ipynb
+++ b/chatgpt-transformer-imdb-advanced.ipynb
@@ -359,7 +359,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Build and Train a the Model\r\n",
+        "# Build and Train the Model\r\n",
         "\r\n",
         "Here's an example of building and training a transformer model using TransformerBlock, MultiHeadSelfAttention, TokenAndPositionEmbedding, and IMDBDataset from the previous examples. This example calculates and outputs the loss and accuracy for both training and test data for each epoch:\r\n",
         "\r\n",
