--- a/chatgpt-transformer-imdb-advanced.ipynb
+++ b/chatgpt-transformer-imdb-advanced.ipynb
@@ -44,7 +44,7 @@
         {
           "output_type": "stream",
           "name": "stderr",
-          "text": "/anaconda/envs/azureml_py38_PT_TF/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n  from .autonotebook import tqdm as notebook_tqdm\n2023-05-10 00:42:34.438071: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\nTo enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n2023-05-10 00:42:35.407668: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+          "text": "/anaconda/envs/azureml_py38_PT_TF/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n  from .autonotebook import tqdm as notebook_tqdm\n2023-05-10 04:14:06.831291: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\nTo enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n2023-05-10 04:14:07.792095: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
         }
       ],
       "execution_count": 1,
@@ -59,7 +59,7 @@
           }
         },
         "gather": {
-          "logged": 1683679356272
+          "logged": 1683692048626
         }
       }
     },
@@ -126,6 +126,13 @@
         "\r\n",
         "        return self.fc(context_vectors), attention_weights\r\n",
         "\r\n",
+        "d_model = 128\r\n",
+        "num_heads = 8\r\n",
+        "d_ff = 2048\r\n",
+        "dropout = 0.1\r\n",
+        "vocab_size = 20000\r\n",
+        "max_seq_len = 200\r\n",
+        "\r\n",
         "# Example usage:\r\n",
         "input_tensor = torch.rand(16, 50, d_model)  # 16 is batch_size and 50 is sequence length\r\n",
         "\r\n",
@@ -133,7 +140,7 @@
         "output, attention_weights = self_attention(input_tensor)"
       ],
       "outputs": [],
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "jupyter": {
           "source_hidden": false,
@@ -145,7 +152,7 @@
           }
         },
         "gather": {
-          "logged": 1683679356770
+          "logged": 1683692048782
         }
       }
     },
@@ -192,15 +199,13 @@
         "        return self.dropout(embeddings)\r\n",
         "\r\n",
         "# Example usage:\r\n",
-        "vocab_size = 20000\r\n",
-        "max_seq_len = 200\r\n",
         "input_ids = torch.randint(0, vocab_size, (16, max_seq_len))  # 16 is batch_size\r\n",
         "\r\n",
         "embedding_layer = TokenPositionEmbedding(vocab_size, d_model, max_seq_len)\r\n",
         "embeddings = embedding_layer(input_ids)"
       ],
       "outputs": [],
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "jupyter": {
           "source_hidden": false,
@@ -212,7 +217,7 @@
           }
         },
         "gather": {
-          "logged": 1683679357045
+          "logged": 1683692048952
         }
       }
     },
@@ -267,15 +272,13 @@
         "        return x\r\n",
         "\r\n",
         "# Example usage:\r\n",
-        "\r\n",
-        "\r\n",
         "input_ids = torch.randint(0, vocab_size, (16, max_seq_len))  # 16 is batch_size\r\n",
         "\r\n",
         "transformer_block = TransformerBlock(d_model, num_heads, d_ff, vocab_size, max_seq_len)\r\n",
         "output = transformer_block(input_ids)"
       ],
       "outputs": [],
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "jupyter": {
           "source_hidden": false,
@@ -287,7 +290,7 @@
           }
         },
         "gather": {
-          "logged": 1683679357227
+          "logged": 1683692049171
         }
       }
     },
@@ -340,7 +343,7 @@
         "test_loader = DataLoader(test_dataset, batch_size=batch_size)"
       ],
       "outputs": [],
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "jupyter": {
           "source_hidden": false,
@@ -352,7 +355,7 @@
           }
         },
         "gather": {
-          "logged": 1683679360748
+          "logged": 1683692053041
         }
       }
     },
@@ -473,10 +476,10 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "Epoch 1/10, Train Loss: 0.6343, Train Acc: 0.6237, Test Loss: 0.5478, Test Accuracy: 0.7199\nEpoch 2/10, Train Loss: 0.5074, Train Acc: 0.7491, Test Loss: 0.4775, Test Accuracy: 0.7671\nEpoch 3/10, Train Loss: 0.4477, Train Acc: 0.7916, Test Loss: 0.4384, Test Accuracy: 0.7941\nEpoch 4/10, Train Loss: 0.4066, Train Acc: 0.8114, Test Loss: 0.4271, Test Accuracy: 0.8021\nEpoch 5/10, Train Loss: 0.3753, Train Acc: 0.8319, Test Loss: 0.4086, Test Accuracy: 0.8119\nEpoch 6/10, Train Loss: 0.3532, Train Acc: 0.8428, Test Loss: 0.4042, Test Accuracy: 0.8186\nEpoch 7/10, Train Loss: 0.3323, Train Acc: 0.8556, Test Loss: 0.3939, Test Accuracy: 0.8240\nEpoch 8/10, Train Loss: 0.3138, Train Acc: 0.8660, Test Loss: 0.3914, Test Accuracy: 0.8277\nEpoch 9/10, Train Loss: 0.2999, Train Acc: 0.8724, Test Loss: 0.3866, Test Accuracy: 0.8320\nEpoch 10/10, Train Loss: 0.2818, Train Acc: 0.8821, Test Loss: 0.3864, Test Accuracy: 0.8324\n"
+          "text": "Epoch 1/10, Train Loss: 0.6209, Train Acc: 0.6328, Test Loss: 0.5342, Test Accuracy: 0.7276\n"
         }
       ],
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "jupyter": {
           "source_hidden": false,
@@ -488,7 +491,7 @@
           }
         },
         "gather": {
-          "logged": 1683679883373
+          "logged": 1683691333404
         }
       }
     }
